Fix offcanvas spacing and remove gutter in main content columns

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -29,6 +29,11 @@ html, body {
   height: 100%;
 }
 
+#main-content .col-no-gutter {
+  padding-left: 0;
+  padding-right: 0;
+}
+
 .offcanvas-toggle {
   position: relative;
   float: left;
@@ -74,7 +79,12 @@ html, body {
   left: -25%; /* 3 columns */
 }
 
-.row-offcanvas-left.active {
+.row-offcanvas-left.active
+.sidebar-offcanvas {
+  left: 0; /* 3 columns */
+}
+
+.row-offcanvas-left.active #map-container {
   left: 25%; /* 3 columns */
 }
 
